# WorkPause-Bot

./: .env.example  README.md  bot.py  pyproject.toml  requirements.txt
assets/: README.md
output/: work_pause_activity_logs.json
scripts/: run_app.sh
src/utils/: json_utils.py
